tests/paczka1/small_fuzzy/31244196.err
Error in line 3: uIHHFD3Z3qs S267 -2,8
Error in line 9: S828 S828 -2,6
Error in line 13: NMBaLGD S828 40,3
